--- a/Console/Console.csproj
+++ b/Console/Console.csproj
@@ -71,6 +71,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RentaledCarsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RentaledCarsForm.Designer.cs">
+      <DependentUpon>RentaledCarsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="RentalForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +99,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RentaledCarsForm.resx">
+      <DependentUpon>RentaledCarsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="RentalForm.resx">
       <DependentUpon>RentalForm.cs</DependentUpon>
     </EmbeddedResource>
